# aiwork-summary

./: .gitignore  README.md
aiwork-summary/: bun.lockb  package-lock.json  package.json
aiwork-summary/src-tauri/: Cargo.toml  tauri.conf.json
my-app/: bun.lockb  package-lock.json  package.json
my-app/app/: Switch.tsx  page.tsx  reducer.ts
my-app/src-tauri/: Cargo.toml  tauri.conf.json
my-app/src-tauri/src/: excel_handler.rs  main.rs  scraper.rs
